# scratch-compositor

./: .gitignore  COMPOSITOR.md  CONFIG.md  CRASHING.md  DEVFAQ.md  PROTOCOLS.md  README.md  Roadmap.md  TESTING.md  WORKFLOWS.md  feature-request_IPC_stabilisation.md  meson.build  stackcomp.conf.example
.github/: README-ci.md
.github/workflows/: ci.yml
config/: ENVIRONMENT.md  environment  morph.conf  morph.desktop  portals  reload.sh  shutdown.sh  stackcomp.conf  stackcomp.desktop  startup.sh
data/: morph-dev.desktop  morph.desktop  stackcomp-dev.desktop  stackcomp.desktop
data/stackcomp/: environment  stackcomp.conf
docs/: BACKLOG.md  CLI.md  COMPOSITOR.md  CONFIG.md  CRASHING.md  DEVFAQ.md  ENVIRONMENT.md  LAUNCHER.md  OVERVIEW.md  PROTOCOLS.md  TESTING.md  TESTS.md  morph.conf.example
docs/roadmaps/: Roadmap_install-and-user-setup.md
scripts/: dev-install.sh  morph-session  prepare_startup.sh  shell-helpers.sh  stackcomp-session  system-uninstall.sh  system_reload.sh  system_shutdown.sh  system_startup.sh  test-nested-smoke.sh
src/: config.c  config.h  crash_handler.c  crash_handler.h  ext_workspace.c  main.c  server.h
testing/: LAUNCHER.md  morph.conf  morph_run  stackcomp.conf  stackcomp_run  test-howto_start-variants.nfo  testplan-manual-morph.nfo  waybar-morph.css  waybar-morph.jsonc  waybar-stackcomp.css  waybar-stackcomp.jsonc
tests/: test_config.c  test_shell_runtime.sh
